--- a/views/index.jade
+++ b/views/index.jade
@@ -7,4 +7,4 @@ html
       img(src='images//helpie_logo.svg')
       h2 Find your loved ones
     #lower
-      a.start(href='/start') start 
+      a.circle(href='/start') start
